[project]
name = "poker-bench"
version = "0.1.0"
description = "LLMs playing poker"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "ipython>=9.4.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.12.7",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = [
    "I", # isort
    "B", # black
    "E", # flake8-erros
    "F", # flake8-builtins
]

[tool.ruff.lint.isort]
force-single-line = true
